@@ -1,5 +1,8 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
+== 01/02/2013 ==
+Vaion: RoF: Crash prevention for Item Preview window.
+
 ==01/01/2013==
 Uleat: Fixed the wear change issue where the server was not translating the SoF, SoD and UF clients' update request properly.
 Uleat: Fixed the non-clickable quest reward bug triggered when the item was in a container and the player traded the item or zoned.
